# elevenlabs-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-12-expand-mcp-tools.md
docs/superpowers/specs/: 2026-04-12-expand-mcp-tools-design.md
src/elevenlabs_mcp/: server.py
tests/: test_pyproject.py  test_server.py
