[project]
name = "elevenlabs-mcp"
version = "0.1.0"
description = "MCP server for ElevenLabs text-to-speech and sound effects"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "elevenlabs>=1.0.0",
    "fastmcp>=3.2.3",
]

[project.scripts]
elevenlabs-mcp = "elevenlabs_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
