[project]
name = "elevenlabs-mcp"
version = "1.1.1"
description = "MCP server for ElevenLabs text-to-speech, voice conversion, transcription, and audio tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MisterVitoPro" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "elevenlabs>=2.0.0,<3.0.0",
    "fastmcp>=3.2.3,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/MisterVitoPro/elevenlabs-mcp"
Repository = "https://github.com/MisterVitoPro/elevenlabs-mcp"
Issues = "https://github.com/MisterVitoPro/elevenlabs-mcp/issues"
Changelog = "https://github.com/MisterVitoPro/elevenlabs-mcp/blob/main/CHANGELOG.md"

[project.scripts]
elevenlabs-mcp = "elevenlabs_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
